--- a/confignet.json
+++ b/confignet.json
@@ -7,11 +7,16 @@
 	"datafile_lp_socket_pull": "tcp://*:5557",
 	"datafile_hp_socket_push": "tcp://172.17.0.3:5558",
 	"datafile_hp_socket_pull": "tcp://*:5558",
-	"command_socket_pubsub": "tcp://172.17.0.2:5559",
-	"monitoring_socket_push": "tcp://172.17.0.2:5560",
-	"monitoring_socket_pull": "tcp://*:5560",
-	"result_socket_push": "tcp://localhost:5561",
+	"datastring_lp_socket_push": "tcp://172.17.0.3:5559",
+	"datastring_lp_socket_pull": "tcp://*:5559",
+	"datastring_hp_socket_push": "tcp://172.17.0.3:5559",
+	"datastring_hp_socket_pull": "tcp://*:5559",
+	"command_socket_pubsub": "tcp://172.17.0.2:5560",
+	"monitoring_socket_push": "tcp://172.17.0.2:5561",
+	"monitoring_socket_pull": "tcp://*:5561",
+	"result_socket_push": "tcp://localhost:5562",
 	"num_workers": 5
   }
+  
   
   
