multi result sockets working with threads

--- a/config.json
+++ b/config.json
@@ -6,23 +6,23 @@
   },
   {
 	"processname": "OOQS1",
-	"dataflow_type": "binary",
-	"processing_type": "process",
+	"dataflow_type": "string",
+	"processing_type": "thread",
 	"datasocket_type": "pushpull",
 	"data_lp_socket": "tcp://localhost:5555",
 	"data_hp_socket": "tcp://localhost:5556",
 	"command_socket": "tcp://127.0.0.1:5561",
 	"monitoring_socket": "tcp://localhost:5562",
-	"manager_result_socket_type": ["pubsub", "pubsub"],
-	"manager_result_dataflow_type": ["string", "string"],
-	"manager_result_socket": ["tcp://localhost:5563", "tcp://localhost:5564"],
+	"manager_result_socket_type": ["pubsub", "none"],
+	"manager_result_dataflow_type": ["string", "none"],
+	"manager_result_socket": ["tcp://localhost:5563", "none"],
 	"manager_num_workers": [5, 2],
 	"comment": "datasockettype=pushpull|pubsub dataflowtype=binary|filename|string processingtype=process|thread"
   },
   {
 	"processname": "OOQS2",
-	"dataflow_type": "binary",
-	"processing_type": "process",
+	"dataflow_type": "string",
+	"processing_type": "thread",
 	"datasocket_type": "pubsub",
 	"data_lp_socket": "tcp://localhost:5563",
 	"data_hp_socket": "tcp://localhost:5564",
