--- a/config.json
+++ b/config.json
@@ -7,7 +7,7 @@
   {
 	"processname": "OOQS1",
 	"dataflow_type": "string",
-	"processing_type": "thread",
+	"processing_type": "process",
 	"datasocket_type": "pushpull",
 	"data_lp_socket": "tcp://localhost:5555",
 	"data_hp_socket": "tcp://localhost:5556",
