--- a/confignet.json
+++ b/confignet.json
@@ -1,4 +1,4 @@
-  [
+[
 	{
 	  "processname": "CommandCenter",
 	  "command_socket": "tcp://172.17.0.2:5561",
@@ -6,30 +6,32 @@
 	},
 	{
 	  "processname": "OOQS1",
-	  "dataflow_type": "binary",
+	  "dataflow_type": "string",
 	  "processing_type": "process",
-	  "datasocket_type": "pushpull",
-	  "data_lp_socket": "tcp://172.17.0.3:5555",
-	  "data_hp_socket": "tcp://172.17.0.3:5556",
+	  "datasocket_type": "pubsub",
+	  "data_lp_socket": "tcp://172.17.0.2:5555",
+	  "data_hp_socket": "tcp://172.17.0.2:5556",
 	  "command_socket": "tcp://172.17.0.2:5561",
 	  "monitoring_socket": "tcp://172.17.0.2:5562",
-	  "manager_result_socket_type": ["pushpull", "pushpull"],
-	  "manager_result_socket": ["tcp://172.17.0.3:5563", "tcp://172.17.0.3:5564"],
+	  "manager_result_socket_type": ["pushpull", "none"],
+	  "manager_result_dataflow_type": ["string", "none"],
+	  "manager_result_socket": ["tcp://172.17.0.3:5563", "none"],
 	  "manager_num_workers": [5, 2],
 	  "comment": "datasockettype=pushpull|pubsub dataflowtype=binary|filename|string processingtype=process|thread"
 	},
 	{
 	  "processname": "OOQS2",
-	  "dataflow_type": "binary",
-	  "processing_type": "process",
+	  "dataflow_type": "string",
+	  "processing_type": "thread",
 	  "datasocket_type": "pushpull",
-	  "data_lp_socket": "tcp://172.17.0.3:5555",
-	  "data_hp_socket": "tcp://172.17.0.3:5556",
+	  "data_lp_socket": "tcp://172.17.0.3:5563",
+	  "data_hp_socket": "tcp://172.17.0.3:5564",
 	  "command_socket": "tcp://172.17.0.2:5561",
 	  "monitoring_socket": "tcp://172.17.0.2:5562",
-	  "manager_result_socket_type": ["pushpull", "pushpull"],
-	  "manager_result_socket": ["tcp://172.17.0.3:5563", "tcp://172.17.0.3:5564"],
-	  "manager_num_workers": [5, 2],
+	  "manager_result_socket_type": ["none"],
+	  "manager_result_dataflow_type": ["none"],
+	  "manager_result_socket": ["none"],
+	  "manager_num_workers": [2],
 	  "comment": "datasockettype=pushpull|pubsub dataflowtype=binary|filename|string processingtype=process|thread"
 	}
   ]
