--- a/rta_dataprocessor/src/Makefile
+++ b/rta_dataprocessor/src/Makefile
@@ -105,7 +105,7 @@ PY_SCRIPTS_L       =
 PY_MODULES         = 
 PY_MODULES_L       =
 
-PY_PACKAGES        = ooqsdataprocessor
+PY_PACKAGES        = rtamanagerImpl
 PY_PACKAGES_L      =
 pppppp_MODULES	   =
 
@@ -133,8 +133,8 @@ CDB_SCHEMAS =
 # 
 # IDL Files and flags
 # 
-IDL_FILES = rtadataprocessor
-rtadataprocessorStubs_LIBS = acscomponentStubs acscommonStubs
+IDL_FILES = rtamanager
+rtamanagerStubs_LIBS = acscomponentStubs acscommonStubs
 TAO_IDLFLAGS =
 USER_IDL =
 #
