--- a/confignet.json
+++ b/confignet.json
@@ -5,7 +5,7 @@
 	  "monitoring_socket": "tcp://172.17.0.2:5562"
 	},
 	{
-	  "processname": "OOQS1",
+	  "processname": "RTADP1",
 	  "dataflow_type": "string",
 	  "processing_type": "process",
 	  "datasocket_type": "pubsub",
@@ -20,7 +20,7 @@
 	  "comment": "datasockettype=pushpull|pubsub dataflowtype=binary|filename|string processingtype=process|thread"
 	},
 	{
-	  "processname": "OOQS2",
+	  "processname": "RTADP2",
 	  "dataflow_type": "string",
 	  "processing_type": "thread",
 	  "datasocket_type": "pushpull",
