--- a/config.json
+++ b/config.json
@@ -8,12 +8,12 @@
 	"processname": "RTADP1",
 	"dataflow_type": "string",
 	"processing_type": "process",
-	"datasocket_type": "pushpull",
+	"datasocket_type": "pubsub",
 	"data_lp_socket": "tcp://localhost:5555",
 	"data_hp_socket": "tcp://localhost:5556",
 	"command_socket": "tcp://127.0.0.1:5561",
 	"monitoring_socket": "tcp://localhost:5562",
-	"manager_result_socket_type": ["pushpull", "none"],
+	"manager_result_socket_type": ["pubsub", "none"],
 	"manager_result_dataflow_type": ["string", "none"],
 	"manager_result_socket": ["tcp://localhost:5563", "none"],
 	"manager_num_workers": [5, 2],
@@ -23,7 +23,7 @@
 	"processname": "RTADP2",
 	"dataflow_type": "string",
 	"processing_type": "thread",
-	"datasocket_type": "pushpull",
+	"datasocket_type": "pubsub",
 	"data_lp_socket": "tcp://localhost:5563",
 	"data_hp_socket": "tcp://localhost:5564",
 	"command_socket": "tcp://127.0.0.1:5561",
