--- a/config1.json
+++ b/config1.json
@@ -2,33 +2,33 @@
   {
 	"processname": "CommandCenter",
 	"command_socket": "tcp://127.0.0.1:5561",
-	"monitoring_socket": "tcp://localhost:5562"
+	"monitoring_socket": "tcp://127.0.0.1:5562"
   },
   {
 	"processname": "RTADP1",
 	"dataflow_type": "string",
 	"processing_type": "process",
-	"datasocket_type": "pubsub",
-	"data_lp_socket": "tcp://localhost:5555",
-	"data_hp_socket": "tcp://localhost:5556",
+	"datasocket_type": "pushpull",
+	"data_lp_socket": "tcp://127.0.0.1:5555",
+	"data_hp_socket": "tcp://127.0.0.1:5556",
 	"command_socket": "tcp://127.0.0.1:5561",
-	"monitoring_socket": "tcp://localhost:5562",
+	"monitoring_socket": "tcp://127.0.0.1:5562",
 	"manager_result_socket_type": ["pubsub", "none"],
 	"manager_result_dataflow_type": ["string", "none"],
 	"manager_result_lp_socket": ["tcp://127.0.0.1:5563", "none"],
 	"manager_result_hp_socket": ["tcp://127.0.0.1:5564", "none"],
-	"manager_num_workers": [5, 2],
+	"manager_num_workers": [2, 2],
 	"comment": "datasockettype=pushpull|pubsub dataflowtype=binary|filename|string processingtype=process|thread"
   },
   {
 	"processname": "RTADP2",
 	"dataflow_type": "string",
-	"processing_type": "thread",
+	"processing_type": "process",
 	"datasocket_type": "pubsub",
-	"data_lp_socket": "tcp://localhost:5563",
-	"data_hp_socket": "tcp://localhost:5564",
+	"data_lp_socket": "tcp://127.0.0.1:5563",
+	"data_hp_socket": "tcp://127.0.0.1:5564",
 	"command_socket": "tcp://127.0.0.1:5561",
-	"monitoring_socket": "tcp://localhost:5562",
+	"monitoring_socket": "tcp://127.0.0.1:5562",
 	"manager_result_socket_type": ["none"],
 	"manager_result_dataflow_type": ["none"],
 	"manager_result_lp_socket": ["none"],
@@ -37,6 +37,3 @@
 	"comment": "datasockettype=pushpull|pubsub dataflowtype=binary|filename|string processingtype=process|thread"
   }
 ]
-
-  
-  
