--- a/config.json
+++ b/config.json
@@ -23,7 +23,7 @@
   {
 	"processname": "RTADP2",
 	"dataflow_type": "string",
-	"processing_type": "thread",
+	"processing_type": "process",
 	"datasocket_type": "pubsub",
 	"data_lp_socket": "tcp://localhost:5563",
 	"data_hp_socket": "tcp://localhost:5564",
