--- a/config.json
+++ b/config.json
@@ -18,6 +18,8 @@
 	"manager_result_lp_socket": ["tcp://127.0.0.1:5563", "none"],
 	"manager_result_hp_socket": ["tcp://127.0.0.1:5564", "none"],
 	"manager_num_workers": [5, 2],
+	"logs_path": "/path/to/logs/folder",
+	"logs_level": 5,
 	"comment": "datasockettype=pushpull|pubsub dataflowtype=binary|filename|string processingtype=process|thread"
   },
   {
@@ -34,6 +36,8 @@
 	"manager_result_lp_socket": ["none"],
 	"manager_result_hp_socket": ["none"],
 	"manager_num_workers": [2],
+	"logs_path": "/path/to/logs/folder",
+	"logs_level": 5,
 	"comment": "datasockettype=pushpull|pubsub dataflowtype=binary|filename|string processingtype=process|thread"
   }
 ]
