--- a/config1.json
+++ b/config1.json
@@ -2,7 +2,8 @@
   {
 	"processname": "CommandCenter",
 	"command_socket": "tcp://127.0.0.1:5561",
-	"monitoring_socket": "tcp://127.0.0.1:5562"
+	"monitoring_socket": "tcp://127.0.0.1:5562",
+	"config_socket": "tcp://127.0.0.1:5563"
   },
   {
 	"processname": "RTADP1",
@@ -18,7 +19,9 @@
 	"manager_result_lp_socket": ["tcp://127.0.0.1:5563", "none"],
 	"manager_result_hp_socket": ["tcp://127.0.0.1:5564", "none"],
 	"manager_num_workers": [2, 2],
-	"comment": "datasockettype=pushpull|pubsub dataflowtype=binary|filename|string processingtype=process|thread"
+	"logs_path": "/path/to/logs/folder",
+	"logs_level": 5,
+	"comment": "datasockettype=pushpull|pubsub|custum dataflowtype=binary|filename|string processingtype=process|thread"
   },
   {
 	"processname": "RTADP2",
@@ -34,6 +37,8 @@
 	"manager_result_lp_socket": ["none"],
 	"manager_result_hp_socket": ["none"],
 	"manager_num_workers": [2],
-	"comment": "datasockettype=pushpull|pubsub dataflowtype=binary|filename|string processingtype=process|thread"
+	"logs_path": "/path/to/logs/folder",
+	"logs_level": 5,
+	"comment": "datasockettype=pushpull|pubsub|custum dataflowtype=binary|filename|string processingtype=process|thread"
   }
 ]
