--- a/config_kafka.json
+++ b/config_kafka.json
@@ -2,7 +2,8 @@
   {
 	"processname": "CommandCenter",
 	"command_socket": "tcp://127.0.0.1:5561",
-	"monitoring_socket": "tcp://localhost:5562"
+	"monitoring_socket": "tcp://localhost:5562",
+	"config_socket": "tcp://localhost:5563"
   },
   {
 	"processname": "RTADP1",
@@ -38,7 +39,7 @@
 	"manager_num_workers": [2],
 	"logs_path": "/path/to/logs/folder",
 	"logs_level": 5,
-	"comment": "datasockettype=pushpull|pubsub dataflowtype=binary|filename|string processingtype=process|thread"
+	"comment": "datasockettype=pushpull|pubsub|custum dataflowtype=binary|filename|string processingtype=process|thread"
   }
 ]
 
