--- a/confignet.json
+++ b/confignet.json
@@ -3,7 +3,7 @@
 	  "processname": "CommandCenter",
 	  "command_socket": "tcp://172.17.0.2:5561",
 	  "monitoring_socket": "tcp://172.17.0.2:5562",
-	  "config_socket": "tcp://172.17.0.2:5563"
+	  "config_socket": "tcp://172.17.0.2:5600"
 	},
 	{
 	  "processname": "RTADP1",
@@ -13,12 +13,13 @@
 	  "data_lp_socket": "tcp://172.17.0.2:5555",
 	  "data_hp_socket": "tcp://172.17.0.2:5556",
 	  "command_socket": "tcp://172.17.0.2:5561",
+	  "config_socket": "tcp://172.17.0.2:5600",
 	  "monitoring_socket": "tcp://172.17.0.2:5562",
 	  "manager_result_socket_type": ["pushpull", "none"],
 	  "manager_result_dataflow_type": ["string", "none"],
 	  "manager_result_socket": ["tcp://172.17.0.3:5563", "none"],
 	  "manager_num_workers": [5, 2],
-	  "logs_path": "/path/to/logs/folder",
+	  "logs_path": "/tmp/",
 	  "logs_level": 5,
 	  "comment": "datasockettype=pushpull|pubsub|custum dataflowtype=binary|filename|string processingtype=process|thread"
 	},
@@ -30,12 +31,13 @@
 	  "data_lp_socket": "tcp://172.17.0.3:5563",
 	  "data_hp_socket": "tcp://172.17.0.3:5564",
 	  "command_socket": "tcp://172.17.0.2:5561",
+	  "config_socket": "tcp://172.17.0.2:5600",
 	  "monitoring_socket": "tcp://172.17.0.2:5562",
 	  "manager_result_socket_type": ["none"],
 	  "manager_result_dataflow_type": ["none"],
 	  "manager_result_socket": ["none"],
 	  "manager_num_workers": [2],
-	  "logs_path": "/path/to/logs/folder",
+	  "logs_path": "/tmp/",
 	  "logs_level": 5,
 	  "comment": "datasockettype=pushpull|pubsub|custum dataflowtype=binary|filename|string processingtype=process|thread"
 	}
