--- a/confignet.json
+++ b/confignet.json
@@ -2,8 +2,7 @@
 	{
 	  "processname": "CommandCenter",
 	  "command_socket": "tcp://172.17.0.2:5561",
-	  "monitoring_socket": "tcp://172.17.0.2:5562",
-	  "config_socket": "tcp://172.17.0.2:5600"
+	  "monitoring_socket": "tcp://172.17.0.2:5562"
 	},
 	{
 	  "processname": "RTADP1",
@@ -13,7 +12,6 @@
 	  "data_lp_socket": "tcp://172.17.0.2:5555",
 	  "data_hp_socket": "tcp://172.17.0.2:5556",
 	  "command_socket": "tcp://172.17.0.2:5561",
-	  "config_socket": "tcp://172.17.0.2:5600",
 	  "monitoring_socket": "tcp://172.17.0.2:5562",
 	  "manager_result_socket_type": ["pushpull", "none"],
 	  "manager_result_dataflow_type": ["string", "none"],
@@ -31,7 +29,6 @@
 	  "data_lp_socket": "tcp://172.17.0.3:5563",
 	  "data_hp_socket": "tcp://172.17.0.3:5564",
 	  "command_socket": "tcp://172.17.0.2:5561",
-	  "config_socket": "tcp://172.17.0.2:5600",
 	  "monitoring_socket": "tcp://172.17.0.2:5562",
 	  "manager_result_socket_type": ["none"],
 	  "manager_result_dataflow_type": ["none"],
