--- a/config.json
+++ b/config.json
@@ -2,17 +2,17 @@
   {
 	"processname": "CommandCenter",
 	"command_socket": "tcp://127.0.0.1:5561",
-	"monitoring_socket": "tcp://localhost:5562"
+	"monitoring_socket": "tcp://127.0.0.1:5562"
   },
   {
 	"processname": "RTADP1",
 	"dataflow_type": "string",
 	"processing_type": "thread",
 	"datasocket_type": "pubsub",
-	"data_lp_socket": "tcp://localhost:5555",
-	"data_hp_socket": "tcp://localhost:5556",
+	"data_lp_socket": "tcp://127.0.0.1:5555",
+	"data_hp_socket": "tcp://127.0.0.1:5556",
 	"command_socket": "tcp://127.0.0.1:5561",
-	"monitoring_socket": "tcp://localhost:5562",
+	"monitoring_socket": "tcp://127.0.0.1:5562",
 	"manager_result_socket_type": ["pubsub", "none"],
 	"manager_result_dataflow_type": ["string", "none"],
 	"manager_result_lp_socket": ["tcp://127.0.0.1:5563", "none"],
@@ -27,10 +27,10 @@
 	"dataflow_type": "string",
 	"processing_type": "thread",
 	"datasocket_type": "pubsub",
-	"data_lp_socket": "tcp://localhost:5563",
-	"data_hp_socket": "tcp://localhost:5564",
+	"data_lp_socket": "tcp://127.0.0.1:5563",
+	"data_hp_socket": "tcp://127.0.0.1:5564",
 	"command_socket": "tcp://127.0.0.1:5561",
-	"monitoring_socket": "tcp://localhost:5562",
+	"monitoring_socket": "tcp://127.0.0.1:5562",
 	"manager_result_socket_type": ["none"],
 	"manager_result_dataflow_type": ["none"],
 	"manager_result_lp_socket": ["none"],
