updated gui conf

--- a/gui/data/ooqs/config.json
+++ b/gui/data/ooqs/config.json
@@ -1,25 +1,32 @@
 [
     {
-        "processname": "CommandCenter",
-        "command_socket": "tcp://127.0.0.1:5561",
-        "monitoring_socket": "tcp://localhost:5562"
+        "processname": "MonitoringForward",
+        "frontend_socket": "tcp://127.0.0.1:5561",
+        "backend_socket": "tcp://127.0.0.1:5562",
+        "monitoring_socket": "tcp://127.0.0.1:5562",
+        "monitoring_forwarder":"on"
       
+    },
+	{
+        "processname": "CommandCenter",
+        "command_socket": "tcp://127.0.0.1:5568"      
     },
     {
     "processname": "RTADP1",
     "dataflow_type": "string",
     "processing_type": "thread",
     "datasocket_type": "pubsub",
-    "data_lp_socket": "tcp://127.0.0.1:5555",
-    "data_hp_socket": "tcp://127.0.0.1:5556",
-    "command_socket": "tcp://127.0.0.1:5561",
-    "monitoring_socket": "tcp://127.0.0.1:5562",
+    "data_lp_socket": "tcp://127.0.0.1:5564",
+    "data_hp_socket": "tcp://127.0.0.1:5565",
+    "command_socket": "tcp://127.0.0.1:5568",
+    "monitoring_socket": "tcp://127.0.0.1:5561",
+    "monitoring_forwarder":"on",
     "manager": [
         {
             "result_socket_type": "pubsub",
             "result_dataflow_type": "string",
-            "result_lp_socket": "tcp://127.0.0.1:5563",
-            "result_hp_socket": "tcp://127.0.0.1:5564",
+            "result_lp_socket": "tcp://127.0.0.1:5566",
+            "result_hp_socket": "tcp://127.0.0.1:5567",
             "num_workers": 5,
             "name": "Rate",
             "name_workers": "worker"
@@ -43,10 +50,11 @@
         "dataflow_type": "string",
         "processing_type": "thread",
         "datasocket_type": "pubsub",
-        "data_lp_socket": "tcp://127.0.0.1:5563",
-        "data_hp_socket": "tcp://127.0.0.1:5564",
-        "command_socket": "tcp://127.0.0.1:5561",
+        "data_lp_socket": "tcp://127.0.0.1:5566",
+        "data_hp_socket": "tcp://127.0.0.1:5567",
+        "command_socket": "tcp://127.0.0.1:5568",
         "monitoring_socket": "tcp://127.0.0.1:5562",
+        "monitoring_forwarder":"on",
         "manager": [
         {
             "result_socket_type": "none",
