updated forwarder monitoring

--- a/config.json
+++ b/config.json
@@ -1,11 +1,10 @@
 [
     {
-        "processname": "MonitoringForward",
-        "frontend_socket": "tcp://127.0.0.1:5561",
-        "backend_socket": "tcp://127.0.0.1:5562",
-        "monitoring_socket": "tcp://127.0.0.1:5562",
-        "monitoring_forwarder":"off"
-      
+        "processname": "Monitoring",
+        "monitoring_forwarder":"off",
+        "forwarder_frontend_socket": "none",
+        "forwarder_backend_socket": "none",
+        "monitoring_socket": "tcp://127.0.0.1:5561"
     },
 	{
         "processname": "CommandCenter",
@@ -20,7 +19,6 @@
     "data_hp_socket": "tcp://127.0.0.1:5565",
     "command_socket": "tcp://127.0.0.1:5568",
     "monitoring_socket": "tcp://127.0.0.1:5561",
-    "monitoring_forwarder":"off",
     "manager": [
         {
             "result_socket_type": "pubsub",
@@ -53,8 +51,7 @@
         "data_lp_socket": "tcp://127.0.0.1:5566",
         "data_hp_socket": "tcp://127.0.0.1:5567",
         "command_socket": "tcp://127.0.0.1:5568",
-        "monitoring_socket": "tcp://127.0.0.1:5562",
-        "monitoring_forwarder":"off",
+        "monitoring_socket": "tcp://127.0.0.1:5561",
         "manager": [
         {
             "result_socket_type": "none",
