--- a/config_forwarder.json
+++ b/config_forwarder.json
@@ -1,10 +1,10 @@
 [
     {
-        "processname": "MonitoringForward",
-        "frontend_socket": "tcp://127.0.0.1:5561",
-        "backend_socket": "tcp://127.0.0.1:5562",
-        "monitoring_socket": "tcp://127.0.0.1:5562",
-        "monitoring_forwarder":"on"
+        "processname": "Monitoring",
+        "monitoring_forwarder":"on",
+        "forwarder_frontend_socket": "tcp://127.0.0.1:5561",
+        "forwarder_backend_socket": "tcp://127.0.0.1:5562",
+        "monitoring_socket": "tcp://127.0.0.1:5562"
       
     },
 	{
@@ -20,7 +20,6 @@
     "data_hp_socket": "tcp://127.0.0.1:5565",
     "command_socket": "tcp://127.0.0.1:5568",
     "monitoring_socket": "tcp://127.0.0.1:5561",
-    "monitoring_forwarder":"on",
     "manager": [
         {
             "result_socket_type": "pubsub",
@@ -54,7 +53,6 @@
         "data_hp_socket": "tcp://127.0.0.1:5567",
         "command_socket": "tcp://127.0.0.1:5568",
         "monitoring_socket": "tcp://127.0.0.1:5561",
-        "monitoring_forwarder":"on",
         "manager": [
         {
             "result_socket_type": "none",
