--- a/c++/config.json
+++ b/c++/config.json
@@ -12,7 +12,7 @@
     },
   {
     "processname": "RTADP1",
-    "dataflow_type": "string",
+    "dataflow_type": "binary",
     "processing_type": "thread",
     "datasocket_type": "pushpull",
     "data_lp_socket": "tcp://127.0.0.1:5564",
@@ -22,7 +22,7 @@
     "manager": [
       {
         "result_socket_type": "pubsub",
-        "result_dataflow_type": "string",
+        "result_dataflow_type": "binary",
         "result_lp_socket": "tcp://127.0.0.1:5566",
         "result_hp_socket": "tcp://127.0.0.1:5567",
         "num_workers": 5,
@@ -44,29 +44,29 @@
     "logs_level": 5,
     "comment": "datasockettype=pushpull|pubsub|custom dataflowtype=binary|filename|string processingtype=process|thread logging=file|console|both|none"
   },
-  {
-    "processname": "RTADP2",
-    "dataflow_type": "string",
-    "processing_type": "thread",
-    "datasocket_type": "pubsub",
-    "data_lp_socket": "tcp://127.0.0.1:5566",
-    "data_hp_socket": "tcp://127.0.0.1:5567",
-    "command_socket": "tcp://127.0.0.1:5568",
-    "monitoring_socket": "tcp://127.0.0.1:5561",
-    "manager": [
-      {
-        "result_socket_type": "none",
-        "result_dataflow_type": "none",
-        "result_lp_socket": "none",
-        "result_hp_socket": "none",
-        "num_workers": 2,
-        "name": "Rate",
-        "name_workers": "worker"
-      }
-    ],
-    "logs_path": "/tmp/",
-    "logging": "both",
-    "logs_level": 5,
-    "comment": "datasockettype=pushpull|pubsub|custum dataflowtype=binary|filename|string processingtype=process|thread"
-  }
+    {
+        "processname": "RTADP2",
+        "dataflow_type": "binary",
+        "processing_type": "thread",
+        "datasocket_type": "pubsub",
+        "data_lp_socket": "tcp://127.0.0.1:5566",
+        "data_hp_socket": "tcp://127.0.0.1:5567",
+        "command_socket": "tcp://127.0.0.1:5568",
+        "monitoring_socket": "tcp://127.0.0.1:5561",
+        "manager": [
+            {
+                "result_socket_type": "none",
+                "result_dataflow_type": "none",
+                "result_lp_socket": "none",
+                "result_hp_socket": "none",
+                "num_workers": 2,
+                "name": "Rate",
+                "name_workers": "worker"
+            }
+        ],
+        "logs_path": "/tmp/",
+        "logging": "both",
+        "logs_level": 5,
+        "comment": "datasockettype=pushpull|pubsub|custum dataflowtype=binary|filename|string processingtype=process|thread"
+    }
 ]
