--- a/c++/config.json
+++ b/c++/config.json
@@ -14,8 +14,8 @@
     "processname": "RTADP1",
     "dataflow_type": "binary",
     "processing_type": "thread",
-    "datasocket_type": "pushpull",
-    "data_lp_socket": "tcp://127.0.0.1:5564",
+    "datasocket_type": "pubsub",
+    "data_lp_socket": "tcp://192.168.1.55:1234",
     "data_hp_socket": "tcp://127.0.0.1:5565",
     "command_socket": "tcp://127.0.0.1:5568",
     "monitoring_socket": "tcp://127.0.0.1:5561",
