--- a/c++/gs_examples_communication/gs_examples_serialization/ccsds/CMakeLists.txt
+++ b/c++/gs_examples_communication/gs_examples_serialization/ccsds/CMakeLists.txt
@@ -1,5 +1,5 @@
-cmake_minimum_required(VERSION 3.10)
-project(AvroSerialize CXX)
+# Remove project definition since we're in a subdirectory
+# project(AvroSerialize CXX)
 
 set(CMAKE_CXX_STANDARD 17)
 set(CMAKE_CXX_EXTENSIONS OFF)
@@ -16,15 +16,16 @@ set(COMMON_SOURCES
     # Add other .cpp files if necessary
 )
 
-add_library(GSccsds STATIC ${COMMON_SOURCES} )
-target_include_directories(GSccsds PUBLIC ${INC_DIR})  # Ensure headers are included
+# Create the library with proper visibility
+add_library(GSccsds STATIC ${COMMON_SOURCES})
+target_include_directories(GSccsds PUBLIC ${INC_DIR})
 
-# Add the executable
+# Add the executables
 add_executable(HKtest src/HKtest.cpp)
 add_executable(WFtest src/WFtest.cpp)
 
-target_include_directories (HKtest PUBLIC ${INC_DIR})
-target_include_directories (WFtest PUBLIC ${INC_DIR})
+target_include_directories(HKtest PUBLIC ${INC_DIR})
+target_include_directories(WFtest PUBLIC ${INC_DIR})
 
 target_link_libraries(HKtest PUBLIC GSccsds)
 target_link_libraries(WFtest PUBLIC GSccsds)
