--- a/env/Dockerfile.arm
+++ b/env/Dockerfile.arm
@@ -1,56 +1,178 @@
-FROM oraclelinux:8 AS oracle8
+FROM ubuntu:22.04
 
-# ---------------------------------- Installing dependencies as root ---------------------------------- 
-RUN dnf install -y epel-release git cmake3 gcc-c++ gcc binutils \
-compat-openssl10 libX11-devel libXpm-devel libXft-devel libXext-devel \ 
-gsl-devel openssl-devel wget bzip2-devel libffi-devel xz-devel sqlite-devel \
-ncurses ncurses-devel make xz libzstd libzstd-devel which rsync \
-nmap-ncat chrony
+ENV DEBIAN_FRONTEND=noninteractive
 
-RUN dnf install -y oracle-epel-release-el8
-RUN dnf config-manager --enable ol8_codeready_builder
-RUN dnf install -y hdf5 hdf5-devel
+# Install basic dependencies
+RUN apt-get update && apt-get install -y \
+    git \
+    cmake \
+    g++ \
+    gcc \
+    binutils \
+    libssl-dev \
+    libx11-dev \
+    libxpm-dev \
+    libxft-dev \
+    libxext-dev \
+    libgsl-dev \
+    libbz2-dev \
+    libffi-dev \
+    libxz-dev \
+    libsqlite3-dev \
+    libncurses-dev \
+    make \
+    xz-utils \
+    libzstd-dev \
+    which \
+    rsync \
+    netcat \
+    chrony \
+    libhdf5-dev \
+    wget \
+    dos2unix \
+    libboost-all-dev \
+    libzmq3-dev \
+    libjson-c-dev \
+    gdb \
+    valgrind \
+    clang \
+    clang-tools \
+    lldb \
+    ninja-build \
+    ccache \
+    doxygen \
+    graphviz \
+    cppcheck \
+    lcov \
+    strace \
+    linux-perf \
+    htop \
+    tmux \
+    vim \
+    git-lfs \
+    python3-dev \
+    python3-pip \
+    python3-setuptools \
+    libavro-dev \
+    && rm -rf /var/lib/apt/lists/*
 
+# Install Python packages for development
+RUN pip3 install --no-cache-dir \
+    cmakelang \
+    cpplint \
+    conan \
+    meson \
+    ninja \
+    gcovr \
+    bear \
+    pre-commit
 
-# ---------------------------------- Create worker user ---------------------------------- 
-RUN useradd worker
-USER worker
+# Create worker user and set up environment
+RUN useradd -m worker && \
+    mkdir -p /home/worker/dependencies && \
+    mkdir -p /home/worker/workspace && \
+    mkdir -p /home/worker/.vscode && \
+    mkdir -p /home/worker/build && \
+    mkdir -p /home/worker/scripts && \
+    mkdir -p /home/worker/worker-env && \
+    chown -R worker:worker /home/worker
+
+# Create data directories
+RUN mkdir -p /shared_dir /data01 /data02 && \
+    chown -R worker:worker /shared_dir /data01 /data02
+
 WORKDIR /home/worker
-RUN mkdir -p /home/worker/dependencies
 
+# Copy configuration files
+COPY --chown=worker:worker conda/environment.yml /home/worker/worker-env/
+COPY --chown=worker:worker venv/requirements.arm.txt /home/worker/worker-env/
+
+# Install Miniconda
+RUN wget https://repo.anaconda.com/miniconda/Miniconda3-latest-Linux-aarch64.sh -O /tmp/miniconda.sh && \
+    bash /tmp/miniconda.sh -b -p /opt/conda && \
+    rm /tmp/miniconda.sh && \
+    chown -R worker:worker /opt/conda
+
+USER worker
 SHELL ["/bin/bash", "--login", "-c"]
 
-user root 
-
-#ARM
-#COPY ./Anaconda3-2023.07-2-Linux-aarch64.sh .
-RUN wget https://repo.anaconda.com/archive/Anaconda3-2023.07-2-Linux-aarch64.sh 
-RUN chmod +x Anaconda3-2023.07-2-Linux-aarch64.sh 
-RUN ./Anaconda3-2023.07-2-Linux-aarch64.sh -b -p /opt/conda 
-RUN rm Anaconda3-2023.07-2-Linux-aarch64.sh
-
-
-RUN mkdir -p worker-env 
-COPY conda/environment.yml worker-env
-COPY venv/requirements.arm.txt worker-env
-
-USER worker
-
-RUN export PATH=$PATH:/opt/conda/bin && conda config --append channels conda-forge && conda config --set channel_priority strict &&  conda env create -n worker -f /home/worker/worker-env/environment.yml
-
-RUN export PATH=$PATH:/opt/conda/bin && source activate worker && cd /home/worker/worker-env/ && pip3 install -r requirements.arm.txt
-
-USER root
-RUN  mkdir /shared_dir
-RUN chown -R worker:worker /shared_dir
-RUN  mkdir /data01
-RUN chown -R worker:worker /data01
-RUN  mkdir /data02
-RUN chown -R worker:worker /data02
-COPY ./entrypoint.sh /home/worker/entrypoint.sh
-RUN chmod +x /home/worker/entrypoint.sh
-
-USER worker
-RUN mkdir /home/worker/workspace
+# Set up conda environment
 ENV PATH="/opt/conda/bin:$PATH"
-#ENTRYPOINT ["bash", "/home/worker/entrypoint.sh"]
+RUN conda init bash && \
+    . ~/.bashrc && \
+    conda config --set auto_activate_base false && \
+    conda config --add channels conda-forge && \
+    conda config --set channel_priority strict && \
+    conda env create -n worker -f /home/worker/worker-env/environment.yml && \
+    conda clean -afy
+
+# Install additional Python packages
+RUN source activate worker && \
+    cd /home/worker/worker-env/ && \
+    pip3 install -r requirements.arm.txt
+
+# Create and set up entrypoint script
+RUN echo '#!/bin/bash' > /home/worker/entrypoint.sh && \
+    echo '' >> /home/worker/entrypoint.sh && \
+    echo '# Activate conda environment' >> /home/worker/entrypoint.sh && \
+    echo 'source /opt/conda/bin/activate worker' >> /home/worker/entrypoint.sh && \
+    echo '' >> /home/worker/entrypoint.sh && \
+    echo '# Set up development environment' >> /home/worker/entrypoint.sh && \
+    echo 'cd /home/worker/workspace' >> /home/worker/entrypoint.sh && \
+    echo '' >> /home/worker/entrypoint.sh && \
+    echo '# If no arguments are provided, start an interactive shell' >> /home/worker/entrypoint.sh && \
+    echo 'if [ $# -eq 0 ]; then' >> /home/worker/entrypoint.sh && \
+    echo '    exec /bin/bash' >> /home/worker/entrypoint.sh && \
+    echo 'else' >> /home/worker/entrypoint.sh && \
+    echo '    # Execute the provided command' >> /home/worker/entrypoint.sh && \
+    echo '    exec "$@"' >> /home/worker/entrypoint.sh && \
+    echo 'fi' >> /home/worker/entrypoint.sh && \
+    chmod +x /home/worker/entrypoint.sh && \
+    dos2unix /home/worker/entrypoint.sh
+
+# Set up development environment
+ENV CC=gcc \
+    CXX=g++ \
+    CMAKE_BUILD_TYPE=Debug \
+    CMAKE_EXPORT_COMPILE_COMMANDS=ON \
+    CMAKE_GENERATOR=Ninja \
+    CTEST_OUTPUT_ON_FAILURE=1 \
+    GTEST_COLOR=1
+
+# Create development scripts
+RUN echo '#!/bin/bash' > /home/worker/scripts/build_debug.sh && \
+    echo 'cd /home/worker/build' >> /home/worker/scripts/build_debug.sh && \
+    echo 'cmake -DCMAKE_BUILD_TYPE=Debug -DCMAKE_EXPORT_COMPILE_COMMANDS=ON ..' >> /home/worker/scripts/build_debug.sh && \
+    echo 'ninja' >> /home/worker/scripts/build_debug.sh && \
+    echo '#!/bin/bash' > /home/worker/scripts/build_release.sh && \
+    echo 'cd /home/worker/build' >> /home/worker/scripts/build_release.sh && \
+    echo 'cmake -DCMAKE_BUILD_TYPE=Release -DCMAKE_EXPORT_COMPILE_COMMANDS=ON ..' >> /home/worker/scripts/build_release.sh && \
+    echo 'ninja' >> /home/worker/scripts/build_release.sh && \
+    echo '#!/bin/bash' > /home/worker/scripts/run_tests.sh && \
+    echo 'cd /home/worker/build' >> /home/worker/scripts/run_tests.sh && \
+    echo 'ctest --output-on-failure' >> /home/worker/scripts/run_tests.sh && \
+    chmod +x /home/worker/scripts/*.sh && \
+    dos2unix /home/worker/scripts/*.sh
+
+# Set up development environment in .bashrc
+RUN echo 'export PATH="/home/worker/scripts:$PATH"' >> ~/.bashrc && \
+    echo 'alias build="build_debug.sh"' >> ~/.bashrc && \
+    echo 'alias build-release="build_release.sh"' >> ~/.bashrc && \
+    echo 'alias test="run_tests.sh"' >> ~/.bashrc && \
+    echo 'alias clean="cd /home/worker/build && ninja clean"' >> ~/.bashrc && \
+    echo 'alias rebuild="cd /home/worker/build && rm -rf * && build_debug.sh"' >> ~/.bashrc && \
+    echo 'alias format="find . -name \"*.cpp\" -o -name \"*.h\" | xargs clang-format -i"' >> ~/.bashrc && \
+    echo 'alias lint="cppcheck --enable=all --suppress=missingIncludeSystem ."' >> ~/.bashrc && \
+    echo 'alias coverage="cd /home/worker/build && ninja coverage"' >> ~/.bashrc
+
+# Create VSCode settings
+RUN echo '{' > /home/worker/.vscode/settings.json && \
+    echo '    "cmake.configureOnOpen": true,' >> /home/worker/.vscode/settings.json && \
+    echo '    "cmake.buildDirectory": "${workspaceFolder}/build",' >> /home/worker/.vscode/settings.json && \
+    echo '    "cmake.generator": "Ninja",' >> /home/worker/.vscode/settings.json && \
+    echo '    "C_Cpp.default.configurationProvider": "ms-vscode.cmake-tools",' >> /home/worker/.vscode/settings.json && \
+    echo '    "editor.formatOnSave": true,' >> /home/worker/.vscode/settings.json && \
+    echo '    "C_Cpp.clang_format_style": "file"' >> /home/worker/.vscode/settings.json && \
+    echo '}' >> /home/worker/.vscode/settings.json
+
+ENTRYPOINT ["/home/worker/entrypoint.sh"]
