--- a/env/Dockerfile.ubuntu
+++ b/env/Dockerfile.ubuntu
@@ -47,6 +47,8 @@ RUN cd /tmp && \
 RUN cd /tmp && \
     git clone https://github.com/apache/avro.git && \
     cd avro/lang/c++ && \
+    git checkout release-1.11.1 && \
+    git clean -fdx && \
     mkdir build && \
     cd build && \
     cmake .. -DCMAKE_BUILD_TYPE=Release && \
